--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -31,7 +31,14 @@ body {
   }
 
   h1, h2, h3, h4, h5, h6 {
-    color: white;
+    margin: 0;
+  }
+
+  .r-main {
+    position: absolute;
+    left: 16px;
+    right: 16px;
+    top: 16px;
   }
 }
 
