--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -15,7 +15,7 @@ body {
 
   .inputs {
     width: 220px;
-    &~.inputs {
+    & ~ .inputs {
       margin-left: 12px;
     }
   }
@@ -30,7 +30,12 @@ body {
     justify-content: end;
   }
 
-  h1, h2, h3, h4, h5, h6 {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
     margin: 0;
   }
 
@@ -77,5 +82,3 @@ body {
     margin-right: 6px;
   }
 }
-
-
